[package]
name = "rust_eth"
version = "0.1.0"
edition = "2021"
author = "Ken_komu"

[dependencies]
svm-rs = "0.5.4"
clap = {version="3.1.9", features = ["derive"]}
ethers = "0.6.2"
ethers-solc = { git = "https://github.com/gakonst/ethers-rs" }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", rev="6b6c5115838008565d774d784262e61e01129ebb", features = ["ws"] }
eyre = "*"
hex = "*"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[[bin]]
name = "transact"
path="src/simple_transactions.rs"


[[bin]]
name = "deploy"
path="src/contract_deploy.rs"
